syntax = "proto3";

option csharp_namespace = "NextCart.Contracts.Cart.Proto";

import "CartMessages.proto";

service CartGrain {
  rpc Create (CreateCart) returns (CartResponse);
  rpc Get (GetCart) returns (CartResponse);
  rpc AddItem (AddItem) returns (CartResponse);
  rpc RemoveItem (RemoveItem) returns (CartResponse);
  rpc IncreaseQuantity (IncreaseQuantity) returns (CartResponse);
  rpc DecreaseQuantity (DecreaseQuantity) returns (CartResponse);
  rpc Clear (Clear) returns (CartResponse);
}